test/e2e/fixtures/mapping-linkerd-headers/queries.json
[
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "x-evil-header": "evilness",
      "x-evilness": "more evilness"
    }
  },
  {
    "url": "/target-no-header/",
    "method": "GET",
    "headers": {
      "x-evil-header": "evilness",
      "x-evilness": "more evilness"
    }
  },
  {
    "url": "/target-linkerd-only/",
    "method": "GET",
    "headers": {
      "x-evil-header": "evilness",
      "x-evilness": "more evilness"
    }
  }
]
